# pipelinejustapipeline

stockChecking/test/: .list  1_genKLineSortingRawData.sh  2_genSegmentUpDnRate.sh  3_countingSegMentData.sh  align.sh  buyVsSell2.sh  comm.lib  comm.lib0  forecast.sh  getStockData.sh  playStockList.sh  segSort.sh  showStock.sh  stock.list  test.sh
stockChecking/test/test/: CMakeLists.txt  drawLines.cpp  stockChecking.cpp  view.cpp  view.hpp
stockChecking/test/tools/lib/: comm.lib
stockChecking/test/tools/source/stockToolsShowing/: drawLines.cpp  stockChecking.cpp  view.cpp  view.hpp
stockChecking/test/tools/source/vxworks/: addModuleHead4LibRT.sh  alignLLRTagsAndMltpComments.sh  check.functionCategory  check.ignores  check.preDefines  check.preprocessInfo.data  check.preprocessInfo.mos.data  check.preprocessInfo.solidLines  check.sh  checkCommits.sh  checkIllegalChar.sh  checkInComments.sh  checkInFunctionHeader.sh  checkKeywords.sh  checkTheOrderOfHistoryList.sh  checkUnstable.sh  genCCR_StatusFromCCR_WebPage.sh  getNonCertFunction.sh  getPreprocess.sh  mkccr000.sh  test.sh
